# nix-conf

./: .gitignore  README.md  configuration.nix  flake.nix  home.nix  setup.sh  user.nix
.pi/remote-pi/: config.json
.pi/stack-ops/: session.json
docs/superpowers/plans/: 2026-04-07-launcher-palette.md  2026-04-07-ledmatrix-animations.md  2026-04-07-ledmatrix-effects.md  2026-04-07-ledmatrix-games.md  2026-04-07-ledmatrix-waybar.md  2026-06-09-sunshine-integration.md
docs/superpowers/specs/: 2026-04-07-launcher-palette-design.md  2026-04-07-ledmatrix-animations-design.md  2026-04-07-ledmatrix-effects-design.md  2026-04-07-ledmatrix-waybar-design.md  2026-06-09-sunshine-integration-design.md
modules/: ai.nix  claude.nix  codex.nix  computer-use.nix  desktop.nix  hyprland.nix  packages.nix  pi.nix  services.nix  shell.nix  terminal.nix  walker.nix  waybar.nix
modules/hardware/: fw16.nix
modules/pi/: patch-pi-markdown.cjs  patch-remote-pi.cjs
modules/pi/extensions/: ask-question.ts  claude-controls.ts  desktop-notifications.ts  git-inspect.ts  plan-mode.ts  process-manager.ts  project-check.ts  project-tasks.ts  session-history.ts
modules/pi/lib/: bounded-exec.ts  git-inspect-core.ts  project-check-core.ts  session-history-core.ts
modules/pi/prompts/: commit.md  fix.md  plan-task.md  review.md  solve.md  spec.md  team.md  test.md  wrap-up.md
modules/pi/tests/: ask-question.test.ts  bounded-exec.test.ts  git-inspect.test.ts  patch-pi-markdown.test.ts  project-check.test.ts  session-history.test.ts
scripts/: process-grub-logo.py
scripts/computer-use/: pyproject.toml
scripts/computer-use/computer_use/: overlay.py  server.py  toggle.py
scripts/ledmatrix/: pyproject.toml
scripts/ledmatrix/ledmatrix/: __init__.py  automaton.py  bar.py  battery.py  bounce.py  cascade.py  charging.py  ekg.py  fingerprint.py  fire.py  metaballs.py  monitor.py  network.py  notify.py  plasma.py  rain.py  scan.py  spiral.py  starfield.py  unlock.py  usb.py
scripts/ledmatrix/tests/: test_effects.py  test_matrix.py
