[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledmatrix"
version = "0.1.0"
dependencies = []

[project.scripts]
ledmatrix-bar      = "ledmatrix.bar:main"
ledmatrix-charging = "ledmatrix.charging:main"
ledmatrix-monitor  = "ledmatrix.monitor:main"
ledmatrix-network  = "ledmatrix.network:main"
ledmatrix-notify   = "ledmatrix.notify:main"
