[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledmatrix"
version = "0.1.0"
dependencies = []

[project.scripts]
ledmatrix-bar       = "ledmatrix.bar:main"
ledmatrix-charging  = "ledmatrix.charging:main"
ledmatrix-monitor   = "ledmatrix.monitor:main"
ledmatrix-network   = "ledmatrix.network:main"
ledmatrix-notify    = "ledmatrix.notify:main"
ledmatrix-rain      = "ledmatrix.rain:main"
ledmatrix-ekg       = "ledmatrix.ekg:main"
ledmatrix-automaton = "ledmatrix.automaton:main"
ledmatrix-bounce    = "ledmatrix.bounce:main"
ledmatrix-cascade   = "ledmatrix.cascade:main"
ledmatrix-spiral    = "ledmatrix.spiral:main"
ledmatrix-scan        = "ledmatrix.scan:main"
ledmatrix-battery     = "ledmatrix.battery:main"
ledmatrix-unlock      = "ledmatrix.unlock:main"
ledmatrix-fingerprint = "ledmatrix.fingerprint:main"
ledmatrix-usb         = "ledmatrix.usb:main"
